@@ -1,12 +1,13 @@
 package org.aksw.difs.builder;
 
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -33,9 +34,12 @@ import org.aksw.jena_sparql_api.txn.TxnMgrImpl;
 import org.aksw.jena_sparql_api.txn.api.TxnMgr;
 import org.apache.jena.graph.Node;
 import org.apache.jena.rdf.model.Model;
+import org.apache.jena.rdf.model.ModelFactory;
 import org.apache.jena.rdf.model.Property;
 import org.apache.jena.rdf.model.Resource;
+import org.apache.jena.riot.Lang;
 import org.apache.jena.riot.RDFDataMgr;
+import org.apache.jena.riot.RDFFormat;
 import org.apache.jena.sparql.core.DatasetGraph;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -53,14 +57,17 @@ public class DifsFactory {
 
 	protected SymbolicLinkStrategy symbolicLinkStrategy;
 
-	protected Path repoRootPath;	
+	protected Path configFile;	
 	protected Path storeRelPath;
 	protected Path indexRelPath;
-	protected Collection<DatasetGraphIndexPlugin> indexers;
+	protected boolean createIfNotExists;
+	
+	protected StoreDefinition storeDefinition;
+	
 	protected boolean useJournal = true;
 
 	public DifsFactory() {
-		this.indexers = new LinkedHashSet<>();
+		super();
 	}
 	
 	public static DifsFactory newInstance() {
@@ -68,65 +75,80 @@ public class DifsFactory {
 		return result;
 	}
 	
+	public boolean isCreateIfNotExists() {
+		return createIfNotExists;
+	}
+
+	public DifsFactory setCreateIfNotExists(boolean createIfNotExists) {
+		this.createIfNotExists = createIfNotExists;
+		return this;
+	}
+
 	public static Stream<Resource> listResources(Model model, Collection<Property> properties) {
 		return properties.stream()
 			.flatMap(p ->
 				Streams.stream(model.listResourcesWithProperty(p)));
 	}
 	
-	public DifsFactory loadFromRdf(String filenameOrIri) {
+	public StoreDefinition loadStoreDefinition(Path confFilePath) throws IOException {// String filenameOrIri) {
 		// TODO Handle local files vs urls 
-		Path confFilePath = Paths.get(filenameOrIri);
-		repoRootPath = confFilePath.getParent().toAbsolutePath();
+		/// Path confFilePath = Paths.get(filenameOrIri);
+		// repoRootPath = confFilePath.getParent().toAbsolutePath();
 		
-		
-		Model model = RDFDataMgr.loadModel(filenameOrIri);
+		String filenameOrIri = confFilePath.getFileName().toString();
+		Lang lang = RDFDataMgr.determineLang(filenameOrIri, null, null);
+		Model model = ModelFactory.createDefaultModel();
+		try (InputStream in = Files.newInputStream(confFilePath)) {
+			 RDFDataMgr.read(model, in, lang);
+		}
 		List<Property> mainProperties = Arrays.asList(DIFS.storePath, DIFS.indexPath, DIFS.index);
 
 		Set<Resource> resources = listResources(model, mainProperties).collect(Collectors.toSet());
 		
+		StoreDefinition result;
+		
 		if (resources.isEmpty()) {
 			// Log a warning?
 			logger.info("No config resources found in " + filenameOrIri);
+			result = null;
 		} else if (resources.size() == 1) {
-			StoreDefinition def = resources.iterator().next().as(StoreDefinition.class);
-			loadFrom(def);
+			result = resources.iterator().next().as(StoreDefinition.class);
 		} else {
 			throw new RuntimeException("Multiple configurations detected");
 		}
 		
-		return this;
+		return result;
 	}
 	
-	public DifsFactory loadFrom(StoreDefinition storeDef) {
-		if (storeDef.getStorePath() != null) {
-			storeRelPath = Paths.get(storeDef.getStorePath());
-		}
-
-		if (storeDef.getIndexPath() != null) {
-			indexRelPath = Paths.get(storeDef.getIndexPath());
-		}
-
-		for (IndexDefinition idxDef : storeDef.getIndexDefinition()) {
-			loadIndexDefinition(idxDef);
-		}
-		
-		return this;
-	}
+//	public DifsFactory loadFrom(StoreDefinition storeDef) {
+//		if (storeDef.getStorePath() != null) {
+//			storeRelPath = Paths.get(storeDef.getStorePath());
+//		}
+//
+//		if (storeDef.getIndexPath() != null) {
+//			indexRelPath = Paths.get(storeDef.getIndexPath());
+//		}
+//
+//		for (IndexDefinition idxDef : storeDef.getIndexDefinition()) {
+//			loadIndexDefinition(idxDef);
+//		}
+//		
+//		return this;
+//	}
 	
-	public DifsFactory loadIndexDefinition(IndexDefinition idxDef) {
+	public DatasetGraphIndexerFromFileSystem loadIndexDefinition(IndexDefinition idxDef) {
 		try {
 			Node p = idxDef.getPredicate();
 			String folderName = idxDef.getPath();
 			String className = idxDef.getMethod();
 			Class<?> clz = Class.forName(className);
-			Object obj = clz.newInstance();
+			Object obj = clz.getDeclaredConstructor().newInstance();
 			RdfTermIndexerFactory indexer = (RdfTermIndexerFactory)obj;		
-			addIndex(p, folderName, indexer.getMapper());
+			DatasetGraphIndexerFromFileSystem result = addIndex(p, folderName, indexer.getMapper());
+			return result;
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
-		return this;
 	}
 	
 	public DifsFactory setUseJournal(boolean useJournal) {
@@ -139,34 +161,45 @@ public class DifsFactory {
 	}
 
 		
-	public DifsFactory setPath(Path repoRootPath) {
-		this.repoRootPath = repoRootPath;
+	public DifsFactory setConfigFile(Path configFile) {
+		this.configFile = configFile;
 		return this;
 	}
 	
-	public Path getRepoRootPath() {
-		return repoRootPath;
+	public Path getConfigFile() {
+		return configFile;
 	}
 	
-	public DifsFactory addIndex(Node predicate, String name, Function<Node, String[]> objectToPath) throws IOException {
+	public StoreDefinition getStoreDefinition() {
+		return storeDefinition;
+	}
+	
+	public DifsFactory setStoreDefinition(StoreDefinition storeDefinition) {
+		this.storeDefinition = storeDefinition;
+		return this;
+	}
+	
+	public DatasetGraphIndexerFromFileSystem addIndex(Node predicate, String name, Function<Node, String[]> objectToPath) throws IOException {
 //        raw, DCTerms.identifier.asNode(),
 //        path = Paths.get("/tmp/graphtest/index/by-id"),
 //        DatasetGraphIndexerFromFileSystem::mavenStringToToPath
-				
+		
+		Path repoRootPath = configFile.getParent();
+		
 		Path indexFolder = repoRootPath.resolve("index").resolve(name);
 		// Files.createDirectories(indexFolder);
 		
 		ResourceRepository<String> resStore = ResourceRepoImpl.createWithUriToPath(repoRootPath.resolve("store"));
 
 		Objects.requireNonNull(symbolicLinkStrategy);
-		indexers.add(new DatasetGraphIndexerFromFileSystem(
+		DatasetGraphIndexerFromFileSystem result = new DatasetGraphIndexerFromFileSystem(
 				symbolicLinkStrategy,
 				resStore,
 				predicate,
 				indexFolder,
-				objectToPath));
-		
-		return this;
+				objectToPath);
+
+		return result;
 	}
 	
 	
@@ -184,7 +217,32 @@ public class DifsFactory {
 		// If the repo does not yet exist then run init which
 		// creates default conf files
 		
-		Files.createDirectories(repoRootPath);
+		Path repoRootPath = configFile.getParent();
+		
+		if (createIfNotExists) {
+			Files.createDirectories(repoRootPath);
+		}
+		
+		StoreDefinition effStoreDef;
+		if (!Files.exists(configFile)) {
+			if (storeDefinition == null) {
+				throw new RuntimeException(
+						String.format("Config file %s does not exist and no default config was specified", configFile));
+			}
+			
+			try (OutputStream out = Files.newOutputStream(configFile, StandardOpenOption.CREATE, StandardOpenOption.WRITE)) {
+				RDFDataMgr.write(out, storeDefinition.getModel(), RDFFormat.TURTLE_PRETTY);
+			}
+			
+			effStoreDef = storeDefinition;
+		} else {
+			// Read the config
+			effStoreDef = loadStoreDefinition(configFile);			
+		}
+		
+		
+		// Set up indexers
+		
 		Path txnStore = repoRootPath.resolve("txns");
 		
 		LockManager<Path> processLockMgr = new LockManagerPath(repoRootPath);
@@ -198,6 +256,10 @@ public class DifsFactory {
 		SymbolicLinkStrategy effSymlinkStrategy = symbolicLinkStrategy != null ? symbolicLinkStrategy : new SymbolicLinkStrategyStandard(); 
 
 		TxnMgr txnMgr = new TxnMgrImpl(lockMgr, txnStore, resStore, resLocks, effSymlinkStrategy);
+
+		Collection<DatasetGraphIndexPlugin> indexers = effStoreDef.getIndexDefinition().stream()
+			.map(this::loadIndexDefinition)
+			.collect(Collectors.toList());
 		
 		return new DatasetGraphFromTxnMgr(useJournal, txnMgr, indexers);
 		// TODO Read configuration file if it exists
